--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "canvas": "^3.2.1",
     "express": "^5.2.1",
     "nodemon": "^3.1.11",
     "sharp": "^0.34.5"
